// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-tile
      TEST_CLASSNAME
      {
        background-color: #dde0e6;
        box-shadow: 0 0 0 1px #dde0e6;
        padding-bottom: 56.25%;
        position: relative;
        width: 100%;
      }
      &.y-tile > * {
        align-items: center;
        bottom: 0px;
        display: flex;
        justify-content: center;
        left: 0px;
        position: absolute;
        right: 0px;
        top: 0px;
      }
>
  test content
</div>
`;

exports[`<Tile /> with default options matches its snapshot 1`] = `
<div
  className=
      y-tile
      {
        background-color: #dde0e6;
        box-shadow: 0 0 0 1px #dde0e6;
        padding-bottom: 75%;
        position: relative;
        width: 100%;
      }
      &.y-tile > * {
        align-items: center;
        bottom: 0px;
        display: flex;
        justify-content: center;
        left: 0px;
        position: absolute;
        right: 0px;
        top: 0px;
      }
>
  test content
</div>
`;
